force-app/main/default/objects/Script_Version__c/Script_Version__c.object-meta.xml
<CustomObject>
    <description>Stores recoverable snapshots created by autosave, manual save, import, or export.</description>
    <label>Script Version</label>
    <nameField>
        <displayFormat>VER-{000000}</displayFormat>
        <label>Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>