force-app/main/default/objects/Script_Version__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description
  >ContentVersion Id for the immutable script snapshot file.</description>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>