force-app/main/default/objects/Script_Version__c/fields/Format_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Format_Metadata__c</fullName>
    <description>Formatting metadata captured with this recoverable version.</description>
    <label>Format Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>