force-app/main/default/objects/Script_Version__c/fields/Saved_At__c.field-meta.xml
<CustomField>
    <fullName>Saved_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Saved At</label>
    <type>DateTime</type>
</CustomField>