force-app/main/default/objects/Script_Version__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <type>MasterDetail</type>
</CustomField>