force-app/main/default/objects/Script_Version__c/fields/Version_Label__c.field-meta.xml
<CustomField>
    <fullName>Version_Label__c</fullName>
    <description>Optional human-readable label for a manual version snapshot.</description>
    <label>Version Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>