force-app/main/default/objects/Script_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Script__c</columns>
    <columns>Source__c</columns>
    <columns>Saved_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Script Versions</label>
</ListView>